unit test the functions

--- a/testdata/test1.md.html
+++ b/testdata/test1.md.html
@@ -44,7 +44,7 @@
 
 <h2>Images</h2>
 
-<p><img src="/image/sample.webp" alt="This is an alt text." title="This is a sample image."></p>
+<p><img src="/image/sample.webp" alt="This is an alt text." title="This is a sample image."/></p>
 
 <h2>Links</h2>
 
@@ -90,7 +90,7 @@
 
 <h2>Blocks of code</h2>
 
-<pre><code>let message = 'Hello world';
+<pre><code>let message = &#39;Hello world&#39;;
 alert(message);
 </code></pre>
 
